# cmcp

./: .gitignore  README.md  cmcp.py  pyproject.toml
.github/workflows/: ci.yml
cmcp/: __init__.py
