[tool.poetry]
name = "cmcp"
version = "0.0.1"
description = "A command-line utility for interacting with MCP servers."
authors = ["RussellLuo <luopeng.he@gmail.com>"]
readme = "README.md"
repository = "https://github.com/RussellLuo/cmcp"

[tool.poetry.dependencies]
python = ">=3.10.0,<3.14"
mcp = "2.19.1"

[tool.poetry.scripts]
cmcp = "cmcp:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
