[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
authors = [
    {name = "RussellLuo", email = "luopeng.he@gmail.com"},
    {name = "mevanlc", email = "mevanlc@gmail.com"},
]
requires-python = ">=3.12"
dependencies = [
    "mcp==1.13.0",
    "pygments==2.19.1",
]
name = "cmcp"
version = "0.1.0"
description = "Default template for PDM package"
readme = "README.md"
license = {text = "MIT"}

[project.urls]
repository = "https://github.com/mevanlc/cmcp"

[tool.setuptools]
packages = ["cmcp"]

[project.scripts]
cmcp = "cmcp:main"

